# PY_Meets_CPP

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  build.command  build.command.bak  build.sh  install_vcpkg.bat  install_vcpkg.command  install_vcpkg.sh  main.py  pyproject.toml  vcpkg-configuration.json  vcpkg.json  vcpkg_install.command
.devcontainer/: devcontainer.json  dockerfile  install_miniconda.sh  install_uv.sh  ubuntu 图形库依赖项.bak
cpp/: CMakeLists.txt  bindings.cpp
cpp/base_math/: CMakeLists.txt  leibniz_pi.hpp  ln2.hpp  taylor_base.hpp
cpp/static_class/: CMakeLists.txt  logger.cpp  logger.h
cpp/utils/: CMakeLists.txt  interval_counter.cpp  interval_counter.h  interval_counter.hpp.bak
doc/: cmake_tutorial.md
src/: __init__.py  _color_map.py  _leibniz_pi.py
