# ./pyproject.toml


[project]
name = "py-meets-cpp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8, <3.9"
dependencies = [
    "matplotlib>=3.7.5",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "rich>=14.3.4",
]

[build-system]
requires = ["scikit-build-core>=0.9.0", "pybind11>=3.0.3"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.build-type = "Release"
cmake.define.CMAKE_EXPORT_COMPILE_COMMANDS = "ON"
build-dir = "build/{build_type}"

# 开发期依赖，uv sync 会装，但不打包进发布版本
[dependency-groups]
dev = [
    "pybind11-stubgen>=2.5",
]

# 生成 stub 文件
[tool.pyright]
stubPath = "stubs" # pyi 文件目录
